--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Iloilo City, Iloilo</span>
                   </a>
                 </li>
               </ul>
