--- a/about.html
+++ b/about.html
@@ -114,8 +114,7 @@
                     </h2>
                   </div>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipnisi ut aliquipiusmod tempor incididunt ut labore et
-                  </p>
+about about about                  </p>
                   <hr />
                   <a href="">
                     Read More
