--- a/class.html
+++ b/class.html
@@ -43,19 +43,19 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +09123456789</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>github@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>Iloilo City, Iloilo</span>
                   </a>
                 </li>
               </ul>
@@ -113,8 +113,7 @@
                     Our Classes Videos
                   </h2>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
-                    ostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore
+                   Boxing classes Boxing classes
                   </p>
                 </div>
               </div>
